package dto.mappers;

import app.FlashcardDeck;
import dto.FlashcardDeckDto;

public class FlashcardDeckMapper {
  
}
